--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,8 @@
-pip>=23.2.1
-flask
-pillow>=9.5.0
-protobuf>=4.23.2
-addict
-future
-lmdb
-numpy
+pip>=25.0.1
+Flask
 opencv-python
-Pillow
-pyyaml
+numpy
 requests
-scikit-image
-scipy
-tb-nightly
-torch>=1.7.1
-torchvision
-tqdm
-yapf
-lpips
-insightface>=0.7.3
-onnxruntime
-flask[async]
+torch>=2.1.0
+torchvision==0.16.0
+azure-storage-blob
